[package]
name = "usaddress-rs-wasm"
version = "0.1.0"
authors = ["Alex Brufsky <alex@spacinsider.com>"]
edition = "2018"
description = "A wasm wrapper for the usaddress crate"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
crfs = "0.2.0"
regex = "1.10.6"
lazy_static = "1.5.0"
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.128"
serde-wasm-bindgen = "0.6.5"
unicode-normalization = "0.1.24"
xml = "0.8.20"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
